--- a/projeto_1/style.css
+++ b/projeto_1/style.css
@@ -36,7 +36,7 @@ textarea {
     font-size: 50px;
     width: 55%;
     height: 45%;
-    /* border: none; */
+    border: none;
     color: blue;
     resize: none;
     outline: none;
@@ -172,7 +172,7 @@ button {
         font-size: 20px;
         width: 80%;
         height: 35%;
-        /* border: none; */
+        border: none;
         color: blue;
         resize: none;
         outline: none;
@@ -225,15 +225,15 @@ button {
         left: 0;
         bottom: 0;
         right: 0;
-        margin-left: 10%; /* Manter a margem esquerda */
+        margin-left: 10%; 
         margin-bottom: 50%;
-        display: flex; /* Utilizar flexbox para alinhar os botões horizontalmente */
-        justify-content: center; /* Alinhar os botões ao centro horizontalmente */
+        display: flex; 
+        justify-content: center; 
     }
     
     button {
-        margin-right: 10px; /* Adicionar margem direita entre os botões */
-        padding: 10px 20px; /* Ajustar o preenchimento dos botões */
+        margin-right: 10px; 
+        padding: 10px 20px; 
         border-radius: 20px;
         font-size: 2.6vh;
         color: #F3F5FC;
@@ -267,7 +267,7 @@ button {
         font-size: 20px;
         width: 80%;
         height: 35%;
-        /* border: none; */
+        border: none;
         color: blue;
         resize: none;
         outline: none;
